/**
 * This file is auto generated by tto v0.5.8 !
 * If you want to modify this code, please read the guide 
 * to modify code template.
 *
 * Get started: https://github.com/ixre/tto
 *
 * Copyright (C) 2009-2024 56X.NET, All rights reserved.
 *
 * name : invoice_tenant_service.proto
 * author : jarrysix
 * date : 2024/06/23 15:22:54
 * description :
 * history :
 */




syntax = "proto3";
option go_package = "./;proto";
option java_package = "github.com.ixre.go2o-server.extend.lsp.rpc";

import "global.proto";

// 发票租户服务
service InvoiceService {
    // 保存发票抬头
    rpc SaveHeader (SaveHeaderRequest) returns (SaveHeaderResponse) {
    }
    // 保存发票
    rpc CreateRecord (SaveRecordRequest) returns (SaveRecordResponse) {
    }
    // 获取发票
    rpc GetRecord (InvoiceRecordId) returns (SRecord) {
    }
    // Issue 开具发票,更新发票图片
    rpc Issue(InvoiceIssueRequest)returns (Result){}
    // Issue 发票开具失败
    rpc IssueFail(InvoiceIssueFailRequest)returns (Result){}
    // SendMail 发送发票到邮件中
    rpc SendMail(InvoiceSendMailRequest)returns (Result){}
    // Revert 撤销发票
    rpc Revert(InvoiceRevertRequest)returns (Result){}
}

message InvoiceIssueRequest{
    int64 invoiceId = 1;
    // 发票代码
    string invoiceCode = 3;
    // 发票号码
    string invoiceNo = 4;
    // 开具备注/开票失败备注
    string issueRemark = 15;
    // 发票图片
    string invoicePic = 16;
}

message InvoiceIssueFailRequest{
    int64 invoiceId = 1;
    string reason = 2;
}

message InvoiceSendMailRequest{
    int64 invoiceId = 1;
    string email = 2;
}

message InvoiceRevertRequest{
    int64 invoiceId = 1;
    string reason = 2; 
}

// 保存发票抬头请求
message SaveHeaderRequest{
    // 编号
    int64 id = 1;
    // 租户编号
    int64 tenantId = 2;
    // 发票类型: 1:增值税普通发票 2:增值税专用发票 3:形式发票
    int32 invoiceType = 3;
    // 开具类型, 1: 个人 2:企业
    int32 issueType = 4;
    // HeaderName
    string headerName = 5;
    // 纳税人识别号
    string taxCode = 6;
    // 注册场所地址
    string signAddress = 7;
    // 注册固定电话
    string signTel = 8;
    // 基本户开户银行名
    string bankName = 9;
    // 基本户开户账号
    string bankAccount = 10;
    // 备注
    string remarks = 11;
    // 是否默认
    int32 isDefault = 12;
    // 创建时间
    int64 createTime = 13;
}

// 保存发票抬头响应
message SaveHeaderResponse{
    int32 errCode = 1;
    string errMsg = 2;
    int64 id = 3;
}


// 保存发票请求
message SaveRecordRequest{
    // 租户类型,1:会员  2:商户
    int64 tenantType = 1;
    // 租户用户编号
    int64 tenantUid = 2;
    // 开具租户编号
    int64 issueTenantId = 3;
    // 发票类型: 1:增值税普通发票 2:增值税专用发票 3:形式发票
    int32 invoiceType = 4;
    // 开具抬头类型, 1: 个人 2:企业
    int32 issueType = 5;
    // 买方名称
    string purchaserName = 6;
    // 买方纳税人识别号
    string purchaserTaxCode = 7;
    // 发票项目
    repeated SInvoiceItem items = 8; 
    // 备注
    string remark = 9;
    // 发票接收邮箱地址
    string receiveEmail = 10;
}

// 保存发票响应
message SaveRecordResponse{
    int32 errCode = 1;
    string errMsg = 2;
    int64 id = 3;
}

// 发票编号
message InvoiceRecordId{
    int64 value = 1;
 }
 


// 发票
message SRecord{
    // 编号
    int64 id = 1;
    // 发票代码
    string invoiceCode = 2;
    // 发票号码
    string invoiceNo = 3;
    // 租户编号
    int64 tenantId = 4;
    // 开具租户编号
    int64 issueTenantId = 5;
    // 发票类型: 1:增值税普通发票 2:增值税专用发票 3:形式发票
    int32 invoiceType = 6;
    // 开具类型, 1: 个人 2:企业
    int32 issueType = 7;
    // 销售方名称
    string sellerName = 8;
    // 销售方纳税人识别号
    string sellerTaxCode = 9;
    // 买方名称
    string purchaserName = 10;
    // 买方纳税人识别号
    string purchaserTaxCode = 11;
    // 合计金额
    double invoiceAmount = 12;
    // 合计税额
    double taxAmount = 13;
    // 备注
    string remark = 14;
    // 开具备注/开票失败备注
    string issueRemark = 15;
    // 发票图片
    string invoicePic = 16;
    // 发票接收邮箱地址
    string receiveEmail = 17;
    // 发票状态,1:待开票 2:开票完成 3:未通过
    int32 invoiceStatus = 18;
    // 开票时间
    int64 invoiceTime = 19;
    // 创建时间
    int64 createTime = 20;
    // 更新时间
    int64 updateTime = 21;
    // 发票项目
    repeated SInvoiceItem items = 22;
}


// 发票项目
message SInvoiceItem{
    // 编号
    int64 id = 1;
    // 发票编号
    int64 invoiceId = 2;
    // 项目名称
    string itemName = 3;
    // 项目规格
    string itemSpec = 4;
    // 价格
    double price = 5;
    // 数量
    int32 quantity = 6;
    // 税率
    double taxRate = 7;
    // 计量单位
    string unit = 8;
    // 总金额
    double amount = 9;
    // 税额
    double taxAmount = 10;
    // 创建时间
    int64 createTime = 11;
    // 更新时间
    int64 updateTime = 12;
}